# pereobuyka

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.agents/skills/api-contract-custom/: SKILL.md
.agents/skills/python-fastapi-ddd-skill/: SKILL.md
.agents/skills/python-fastapi-ddd-skill/agents/: openai.yaml
.agents/skills/python-fastapi-ddd-skill/references/: ARCHITECTURE.md  ENTITIES.md  REPOSITORIES.md  USECASES.md  VALUE_OBJECTS.md
.cursor/rules/: convensions.mdc  workflow.mdc
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_web_ui_extensions.py
backend/src/pereobuyka/: config.py  main.py  utils.py
backend/src/pereobuyka/api/v1/: deps.py  deps_extra.py  router.py  routes_extended.py  schemas.py
backend/src/pereobuyka/api/v1/endpoints/: __init__.py  admin.py  admin_web.py  auth.py  client.py  common.py  consultation.py
backend/src/pereobuyka/db/: __init__.py  base.py  models.py  session.py
backend/src/pereobuyka/llm/: __init__.py  errors.py  openrouter_client.py  system_prompt.py
backend/src/pereobuyka/scripts/: __init__.py  seed.py
backend/src/pereobuyka/services/: admin_mutations_pg.py  admin_nl_sql_service.py  admin_web_dashboard.py  api_adapters.py  appointment_service.py  auth_user_pg.py  consultation_deps.py  consultation_orchestrator.py  consultation_types.py  safe_nl_sql.py  slot_service.py  speech_to_text.py  visit_commands.py
backend/src/pereobuyka/storage/: memory.py  postgres_repos.py
backend/src/pereobuyka/storage/repositories/: __init__.py  postgres.py
backend/tests/: booking_helpers.py  conftest.py  test_admin_data_insight.py  test_appointments.py  test_consultation.py  test_consultation_orchestrator.py  test_consultation_transcribe.py  test_health.py  test_safe_nl_sql.py  test_services.py  test_slots.py  test_visit_confirm.py
bot/: .env.example  README.md  pyproject.toml  run_bot.py
bot/src/pereobuyka/: config.py  main.py
bot/src/pereobuyka/bot/: ask_history.py  display_datetime.py  keyboards.py  menu_text.py  router.py
bot/src/pereobuyka/bot/handlers/: appointments.py  ask.py  book.py  loyalty.py  menu.py  services.py  start.py
bot/src/pereobuyka/client/: __init__.py  backend.py
bot/src/pereobuyka/llm/: system_prompt.py
bot/src/pereobuyka/models/: user.py
bot/src/pereobuyka/services/: user_service.py
bot/tests/: test_ask_extract.py
docs/: backlog.md  data-model.md  idea.md  integrations.md  plan.md  vision.md
docs/adr/: README.md  adr-001-database.md
docs/tasks/: tasklist-02-bot.md  tasklist-02-integrations.md  tasklist-03-llm.md  tasklist-backend.md  tasklist-database.md  tasklist-frontend.md
docs/tasks/impl/backend/iteration-01-stack-conventions/: plan.md  summary.md
docs/tasks/impl/backend/iteration-02-api-contracts/: plan.md  summary.md
docs/tasks/impl/backend/iteration-03-scaffold-backend/: plan.md  summary.md
docs/tasks/impl/backend/iteration-04-api-tests-mvp/: plan.md  summary.md
docs/tasks/impl/backend/iteration-05-impl-endpoints/: plan.md  summary.md
docs/tasks/impl/backend/iteration-06-backend-docs/: plan.md  summary.md
docs/tasks/impl/backend/iteration-07-bot-via-api/: plan.md  summary.md
docs/tasks/impl/database/iteration-01-user-scenarios/: plan.md  summary.md
docs/tasks/impl/database/iteration-02-schema-er/: plan.md  summary.md
docs/tasks/impl/database/iteration-03-migrations-adr/: plan.md  summary.md
docs/tasks/impl/database/iteration-04-db-infra/: plan.md  summary.md
docs/tasks/impl/database/iteration-05-orm-repos-backend/: plan.md  (+1 more)
docs/tech/: data-model.md  database-migrations.md  integrations.md  user_scenarios.md
docs/tech/adr/: README.md  adr-001-database.md  adr-002-backend-framework.md  adr-003-orm.md  adr-004-database-migrations-workflow.md  adr-005-speech-to-text.md  adr-006-text-to-sql.md
docs/tech/api/: README.md  api-contracts.md  errors.md  openapi.yaml
docs/templates/: tasklist-template.md
docs/ui/: ui-requirements.md
src/pereobuyka/: config.py  main.py
src/pereobuyka.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pereobuyka/bot/: router.py
src/pereobuyka/bot/handlers/: start.py
src/pereobuyka/llm/: __init__.py
src/pereobuyka/models/: user.py
src/pereobuyka/services/: user_service.py
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/admin/clients/: page.tsx
web/app/client/: page.tsx
web/components/: admin-create-booking-sheet.tsx  admin-week-grid.tsx  app-shell.tsx  chat-widget.tsx  client-rating-stars.tsx
web/components/auth/: login-form.tsx
web/lib/: admin-api.ts  api.ts  auth.ts  booking-time.ts  client-api.ts  consultation-api.ts  web-speech.ts
(+20 files in other folders)
